--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,17 @@
-<my-app>loading</my-app>
+<!doctype html>
+<html lang="en">
+
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>LeaveHomeSafe</title>
+	<base href="/">
+</head>
+
+<body>
+	<my-app>loading</my-app>
+	<noscript>Please enable JavaScript to continue using this application.</noscript>
+</body>
+
+</html>
